manifests/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: iotdeviceidentification 
spec:
  replicas: 4
  selector:
    matchLabels:
      app: iotdeviceidentification
  template:
    metadata:
      labels:
        app: iotdeviceidentification 
    spec:
      containers:
        - name: iotdeviceidentification 
          image: devopspublic.azurecr.io/iotdeviceidentification
          ports:
          - containerPort: 8080
