manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "iot-devices.eastus.cloudapp.azure.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: iotdeviceidentification
            port:
              number: 5000
